  
[package]
name = "first_program"
version = "0.1.0"
authors = ["EternalMC <jamesdrothermel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.22.1"
nalgebra = "0.19.0"
# TODO
# kiss3d_conrod = "0.64.0"


[[bin]]
name = "first_Engine"
path = "main.rs"
