  
[package]
name = "first_program"
version = "0.1.0"
authors = ["EternalMC <jamesdrothermel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.22.1"
nalgebra = "0.19.0"
toml = "0.5.6"
# TODO
# rand = "0.7.3"
# rusttype = "0.8.2"
# lazy_static = "1.4.0"
# texture_packer = "^0.16"
# kiss3d_conrod = "0.64.0"
# serde_derive = "1.0.104"
# serde = "1.0.104"
# ncollide3d = "0.21.0"
# image = "0.23.0"
# glutin = "0.23.0"
# gl = "0.14.0"
# bitflags = "1.2.1"


[[bin]]
name = "first_Engine"
path = "main.rs"
